# PEOps-Back

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  pyproject.toml  worker.py
.github/workflows/: ci.yml
app/: config.py  db.py  dbmodels.py  errors.py  main.py  middleware.py  repositories.py  seed.py
app/auth/: __init__.py  dependencies.py  google.py  security.py
app/engine/: adapter.py  converters.py  statedict_pipeline.py  weight_loaders.py
app/routers/: architecture.py  auth.py  client_telemetry.py  dashboard.py  deployments.py  feedback.py  infer.py  ingestion.py  meta.py  models.py  pareto.py  sdk.py  telemetry.py
app/schemas/: __init__.py  architecture.py  auth.py  client_telemetry.py  common.py  cost.py  dashboard.py  deployments.py  feedback.py  models.py  pareto.py  sdk.py  telemetry.py
app/services/: apikeys.py  cancel.py  capabilities.py  client_telemetry.py  cost.py  detrand.py  drift_monitor.py  family.py  fleet.py  formats.py  github_feedback.py  hardware.py  inference.py  jobs.py  limits.py  model_factory.py  queue.py  storage.py  surrogate.py  telemetry_agg.py  torch_models.py  traffic_sim.py  trial_export.py
app/services/mappers/: architecture_mapper.py  layout.py  op_kind.py  pareto_mapper.py
app/services/viz/: arch_scene.py  layer_descriptions.py  pareto_scene.py
astra/: sdk.py
astra/core/: calibration_generator.py  compression_actions.py  guarantee.py  uosa.py  validation.py
astra/graph/: model_detector.py  onnx_transformer.py
astra/search/: pareto_search.py
clients/node/: CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
clients/node/src/: cli.ts  client.ts  http.ts  index.ts  ort.ts  runner.ts  stats.ts  system.ts  telemetry.ts  tensor.ts  types.ts  version.ts
clients/node/tests/: _mock.ts  client.test.ts  runner.test.ts  stats.test.ts  telemetry.test.ts
clients/python/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
clients/python/astra_sdk/: __init__.py  _http.py  cli.py  client.py  runner.py  stats.py  telemetry.py
clients/python/peops_sdk/: __init__.py  _http.py  cli.py  client.py  runner.py  stats.py  system.py  telemetry.py
clients/python/tests/: test_client.py  test_stats.py  test_telemetry.py
deploy/: .env.example  README.md  docker-compose.yml
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_google_oauth.py  0003_telemetry.py  0004_client_telemetry.py  0005_hardware_telemetry.py  0006_deployment_metadata.py  0007_feedback.py  0008_feedback_attachment.py
peops/: sdk.py
peops/core/: calibration_generator.py  compression_actions.py  guarantee.py  ingestion.py  uosa.py  validation.py
peops/graph/: model_detector.py  onnx_analyzer.py  onnx_transformer.py
peops/search/: pareto_search.py
scripts/: _cost_e2e_assert.py  _hw_e2e_assert.py  _hw_e2e_drive.py  _sdk_e2e_assert.py  _sdk_e2e_client.mjs  _sdk_e2e_client.py  _sdk_e2e_provision.py  calibrate_trial_budget.py  contract_check.mjs  scene_parity_check.mjs  simulate_traffic.py  smoke.py  sync_engine.sh  verify_closed_loop.py  verify_cost_savings.sh  verify_hardware_telemetry.sh  verify_real_models.py  verify_sdk_e2e.sh  verify_sdk_e2e_node.sh
tests/: conftest.py  test_adaptive_budget.py  test_client_telemetry.py  test_contract_architecture.py  test_contract_auth.py  test_contract_capabilities.py  test_contract_dashboard.py  test_contract_feedback.py  test_contract_formats.py  test_contract_models.py  test_contract_pareto.py  test_contract_sdk.py  test_contract_telemetry.py  test_cost_savings.py  test_deploy_status_invariant.py  test_deployments.py  test_drift_monitor.py  test_engine_sync.py  test_fleet_health.py  test_google_oauth.py  test_hardening.py  test_hardware_telemetry.py  test_infer.py  test_ingestion_stream.py  test_mappers.py  test_real_compression.py  test_scene.py  test_telemetry_live.py  test_trial_export.py
