[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "peops-sdk"
version = "0.1.0"
description = "Python client for calling deployed, PEOps-compressed models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[tool.setuptools]
packages = ["peops_sdk"]
