[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "astra-sdk"
version = "0.2.0"
description = "Serve Astra-compressed models anywhere - hosted or local ONNX serving with built-in telemetry that feeds the Astra dashboard"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Astra" }]
keywords = ["onnx", "model-compression", "inference", "telemetry", "mlops"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
serve = ["onnxruntime>=1.18", "numpy>=1.26"]
system = ["psutil>=5.9"]
gpu = ["nvidia-ml-py>=12"]
dev = ["pytest>=8.0", "numpy>=1.26", "onnx>=1.16", "onnxruntime>=1.18"]

[project.urls]
Homepage = "https://github.com/astra/astra"
Documentation = "https://github.com/astra/astra#readme"
Changelog = "https://github.com/astra/astra/blob/main/clients/python/CHANGELOG.md"

[project.scripts]
astra = "astra_sdk.cli:main"

[tool.setuptools]
packages = ["astra_sdk"]

[tool.setuptools.package-data]
astra_sdk = ["py.typed"]
